deployment/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: <NAMESPACE>
  name: frontend-deployment
  labels:
    app: synple-gui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synple-gui
  template:
    metadata:
      labels:
        app: synple-gui
    spec:
      dnsPolicy: Default
      containers:
        - name: modusynth-frontend
          image: virtuatable/modusynth-frontend:<VERSION>
          args:
            - web
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 500m
              memory: 128Mi
