deployment/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: modusynth
  name: frontend-service
  labels:
    app: modusynth
spec:
  selector:
    app: modusynth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
